--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   # firebase
   firebase_core: "^0.7.0"
   firebase_auth: "^0.20.1"
+  cloud_firestore: "^0.16.0"
   provider: "^4.3.2+1"
 
 
