--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  google_maps_flutter: ^2.0.2
+  location: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,8 +51,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/images/logo.jpg
   - assets/images/logo.png
+  - assets/images/ice-cream-truck.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
