--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   google_maps_flutter: ^2.0.2
   location: ^3.0.0
   geolocator: ^5.3.1
+  flutter_geofire: ^2.0.0
+  firebase_database: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
