--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
   assets:
   - assets/images/logo.png
   - assets/images/ice-cream-truck.png
+  - assets/images/ice-cream-truck-blue.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
