--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
   - assets/images/logo.png
   - assets/images/ice-cream-truck.png
   - assets/images/ice-cream-truck-blue.png
+  - assets/images/ice-cream-truck-blue.bmp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
